Printing a receipt now formats the price of the first item in the purchase, as long as the purchase has at least one item