@@ -1,9 +1,11 @@
 package ca.jbrains.pos;
 
+import ca.jbrains.pos.domain.CatalogEntry;
 import ca.jbrains.pos.domain.PurchaseAccumulator;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -14,11 +16,11 @@ class PrintReceiptActionTest {
     @Test
     void happyPathAfterOnly1Purchase() {
         final FormatTotal formatTotal = new FormatTotal(new FormatMonetaryAmount(Locale.ENGLISH));
-
         PurchaseAccumulator purchaseAccumulator = new PurchaseAccumulator() {
             @Override
             public Purchase completePurchase() {
-                return new Purchase(790, Collections.emptyList());
+                List<CatalogEntry> items = List.of(new CatalogEntry(null, 790));
+                return new Purchase(790, items);
             }
 
             @Override
@@ -31,9 +33,11 @@ class PrintReceiptActionTest {
                 "Total: CAD 7.90", new PrintReceiptAction() {
             @Override
             public String printReceipt() {
-                return "12345          CAD 7.90" +
+                Purchase purchase = purchaseAccumulator.completePurchase();
+                return "12345          " +
+                        formatTotal.formatMonetaryAmount().formatMonetaryAmount(purchase.items().get(0).price()) +
                         System.lineSeparator() +
-                        formatTotal.formatTotal(purchaseAccumulator.completePurchase().total());
+                        formatTotal.formatTotal(purchase.total());
             }
         }.printReceipt());
     }
